# CUDA_benchmark

./: .gitignore  CMakeLists.txt  README.md  build.sh  fp_diff.h  helloworld.cu  main.cpp  profiling.sh  reduce_main.cu  sgemm_main.cu  sgemm_plain.cu  sgemm_tile_v1.cu  sgemm_tile_v3.cu
common/: xmath.h
kernels/: cuda_kernel.h
reduce/: reduce_main.cu  reduce_main_v2.cu
sgemm/: sgemm.h  sgemm_main.cu  sgemm_plain.cu  sgemm_tile_v1.cu  sgemm_tile_v2.cu
softmax/: softmax_main.cu
tools/: bandwidth.cu  cuda_info.cu  mem.cu  mem.sh
transpose/: transpose_main.cu
